# run_cmd

./: .gitignore  .gitmodules  README.md  __init__.py  foo  pyproject.toml  run_cmd.py
magic_cmd/: run_cmd.py  script.py
run_cmd/: run_cmd.py
test/: test_script.py
