[tool.poetry]
name = "magic-run-cmd"
version = "1.1.1"
description = "A simple interface to run a bash command from python. It wraps Popen, so  it's easier to run the command. You can use Script object to write pretty bash scripts in python."
authors = ["daniel davee <daniel.v.davee@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "run_cmd"}]

[tool.poetry.dependencies]
python = "^3.9"
pysimplelog = "^4.0.0"


[tool.poetry.group.dev.dependencies]
chat-companion = "^0.1.6"
ipython = "^8.16.1"
icecream = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
